# MSEQ-8---Dynamic-MID-SIDE-EQ-with-psychoacoustically-informed-resonance-detection-

./: .gitignore  CHANGELOG.md  CHANGELOG.sv.md  CMakeLists.txt  LICENSE  MSEQ8-YouTube-Script.md  README.md  RELEASE_NOTES_v1.0.0.md  ROADMAP.md  TESTING.md
.github/workflows/: build.yml
Source/: EQGraphComponent.cpp  EQGraphComponent.h  LookAndFeel.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
marketing-site/: index.html
